--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         /* Основные стили */
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #1ba4ff, #2575fc);
+            background: linear-gradient(135deg, #56bbff, #5daeff);
             color: #fff;
             text-align: center;
             padding: 20px;
