--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         }
 
         .button-container button.motivation {
-            background-color: #ff5c33;
+            background-color: #007BFF;
             font-size: 1.5rem;
             padding: 20px 40px;
         }
