--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
     <!-- Кнопки для выбора опроса или информации -->
     <div class="button-container">
-        <button class="motivation" id="motivationButton">Эстет Мотивация</button>
+        <button class="motivation" id="motivationButton">Мотивация</button>
         <button id="surveyButton">Опрос</button>
         <button id="infoButton">Информация о скалодроме</button>
     </div>
